# bods-kyckr

./: .gitignore  README.md  pyproject.toml  sample_input.json
src/bods_kyckr/: __init__.py  cli.py  config.py  pipeline.py
src/bods_kyckr/ingestion/: api_client.py  json_reader.py  models.py
src/bods_kyckr/output/: writer.py
src/bods_kyckr/transform/: entities.py  identifiers.py  interests.py  persons.py  relationships.py
src/bods_kyckr/utils/: countries.py  dates.py  statements.py
tests/: conftest.py  test_bods_compliance.py  test_countries.py  test_entities.py  test_identifiers.py  test_interests.py  test_persons.py  test_pipeline.py  test_relationships.py
